--- a/purchase-order-app/src/app/purchase-order/pages/purchase-order-form/purchase-order-form.component.html
+++ b/purchase-order-app/src/app/purchase-order/pages/purchase-order-form/purchase-order-form.component.html
@@ -175,7 +175,7 @@
                   <!-- Remove Button -->
                   <div class="col-md-1">
                     <button type="button" class="btn btn-outline-danger btn-sm w-100" (click)="removeItem(i)">
-                      <i class="fas fa-trash"></i> X
+                      <i class="fas fa-trash"></i>
                     </button>
                   </div>
                 </div>
