--- a/purchase-order-app/src/app/purchase-order/pages/purchase-order-form/purchase-order-form.component.html
+++ b/purchase-order-app/src/app/purchase-order/pages/purchase-order-form/purchase-order-form.component.html
@@ -185,7 +185,7 @@
         </div>
 
         <!-- Summary Section -->
-        <div class="card">
+        <div class="card mb-4">
           <div class="card-header bg-light">
             <h5 class="card-title mb-0">
               <i class="fas fa-calculator me-2"></i>Order Summary
@@ -204,7 +204,36 @@
               <div class="col-6 fw-bold">Grand Total:</div>
               <div class="col-6 text-end fw-bold text-primary fs-5">{{ grandTotal | currency:'USD':'symbol':'1.2-2' }}</div>
             </div>
+
           </div>
+          
+        </div>
+
+        <div class="card">
+          <div class="card-header bg-light">
+            <h5 class="card-title mb-0">
+              <i class="fa-solid fa-pen"></i> Status
+            </h5>
+          </div>
+          <div class="card-body">
+
+            <div class="row pt-2 ">
+              <div class="mb-3">
+              <label class="form-label fw-semibold">Status <span class="text-danger">*</span></label>
+              <select class="form-control" formControlName="status" 
+                      [class.is-invalid]="isFieldInvalid('status')">
+                <option value="">Select Status</option>
+                <option value="Draft" >Draft</option>
+                <option value="Approved" >Approved</option>
+                <option value="Recieved" >Recieved</option>
+              </select>
+              <div class="invalid-feedback" *ngIf="isFieldInvalid('status')">
+                Status is required
+              </div>
+            </div>
+            </div>
+          </div>
+          
         </div>
       </div>
     </div>
