--- a/purchase-order-app/src/app/purchase-order/pages/purchase-order-form/purchase-order-form.component.html
+++ b/purchase-order-app/src/app/purchase-order/pages/purchase-order-form/purchase-order-form.component.html
@@ -225,7 +225,7 @@
                 <option value="">Select Status</option>
                 <option value="Draft" >Draft</option>
                 <option value="Approved" >Approved</option>
-                <option value="Received" >Recieved</option>
+                <option value="Received" >Received</option>
               </select>
               <div class="invalid-feedback" *ngIf="isFieldInvalid('status')">
                 Status is required
