--- a/purchase-order-app/src/app/app.component.html
+++ b/purchase-order-app/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div class="container-fluid">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
+<div class="">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4 sticky-top">
     <div class="container">
       <a class="navbar-brand" routerLink="/">
         <i class="fas fa-file-invoice-dollar me-2"></i>
