--- a/purchase-order-app/src/app/purchase-order/pages/purchase-order-form/purchase-order-form.component.html
+++ b/purchase-order-app/src/app/purchase-order/pages/purchase-order-form/purchase-order-form.component.html
@@ -212,7 +212,7 @@
         <div class="card">
           <div class="card-header bg-light">
             <h5 class="card-title mb-0">
-              <i class="fa-solid fa-floppy-disk"></i> Status
+              <i class="fa-solid fa-file-lines"></i> Status
             </h5>
           </div>
           <div class="card-body">
